# rl-llm-envs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
environments/ddp_desync/: env.py  prompt.txt
environments/ddp_desync/starter/: data_gen.py  model.py  train.py
rlenvs/: runner.py
rlenvs/core/: spec.py
rlenvs/judges/: ddp_desync_judge.py
rlenvs/tools/: shell.py
rlenvs/utils/: fs.py
tests/: test_ddp_env.py
