[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-llm-envs"
version = "0.1.0"
description = "RL environments for LLM training: prompt + tools + judge + runner"
requires-python = ">=3.10"
dependencies = [
  "pytest>=7.0",
  "numpy>=1.24",
  "torch>=2.1"
]

[tool.setuptools]
# Only treat `rlenvs` as an installable package.
# `environments/` is data/example code and should not be installed as a package.
packages = ["rlenvs"]

[tool.pytest.ini_options]
testpaths = ["tests"]